[gd_scene load_steps=8 format=3 uid="uid://3dg6x0jfv4mq"]

[ext_resource type="Script" path="res://success.gd" id="1_yu0ol"]
[ext_resource type="Texture2D" uid="uid://b7f8lleu2mrfn" path="res://sprites/success.png" id="2_0y5al"]
[ext_resource type="Texture2D" uid="uid://dvk8td3lsyqos" path="res://sprites/nextlevel.png" id="3_qy6d2"]
[ext_resource type="Texture2D" uid="uid://boryqs081lec4" path="res://sprites/youwin.png" id="3_vwmga"]
[ext_resource type="Texture2D" uid="uid://caelivlb5blvs" path="res://sprites/nextlevelhighlight.png" id="4_63wg7"]
[ext_resource type="Texture2D" uid="uid://b0ftx0on5uwr6" path="res://sprites/mainmenularger.png" id="5_ma6r0"]
[ext_resource type="Texture2D" uid="uid://b67ejlt8s0ddf" path="res://sprites/mainmenulargerhighlight.png" id="6_67p62"]

[node name="Success" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yu0ol")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.172549, 0.0941176, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Success" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_0y5al")

[node name="YouWin" type="TextureRect" parent="VBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_vwmga")

[node name="NextLevelButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_qy6d2")
texture_hover = ExtResource("4_63wg7")
stretch_mode = 3

[node name="MainMenuButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_ma6r0")
texture_hover = ExtResource("6_67p62")
stretch_mode = 3

[connection signal="pressed" from="VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
